# perf_challenge4

./: README.md  run.py
.github/workflows/: cmake.yml
Adam_Folwarczny/: README.md  canny_source.c  run-and-compare.sh
Andrey_Evstyukhin/: canny_source.c
Andrey_Pechkurov/: README.md  canny_source.c  validate.cpp
Goran_Mitrovic/: CMakeLists.txt  README.md  canny_source.cpp
Goran_Mitrovic/version2-2.01.03/: changelog.txt  instrset.h
Peter_Coffman/: CMakeLists.txt  canny_source.c
Sasha_Krassovsky/: canny_source.c
Tomas_Hudziec/: CMakeLists.txt  canny_source.c
Yiannis_Papadopoulos/: canny_source.c
canny_baseline/: CMakeLists.txt  canny_source.c  run-and-compare.sh  validate.cpp
